# gt-mcp-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: compose.rs  config.rs  config_cmd.rs  init.rs  main.rs  mcp_cmd.rs  oauth_login.rs  prime.rs  project_config.rs  quota_cmd.rs  register.rs  session.rs  tools.rs  update.rs  workspace_cmd.rs
