[package]
name = "gt"
version = "0.2.0"
edition = "2021"
description = "Gas Town operator CLI — workspace context (prime) and deploy-stack management (compose)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gt-core-labs/gt"
readme = "README.md"
keywords = ["cli", "gastown", "docker-compose", "deploy"]
categories = ["command-line-utilities"]

[[bin]]
name = "gt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
