[package]
name = "gt"
version = "0.3.1"
edition = "2021"
description = "gt-core operator CLI — workspace context (prime), deploy-stack management (compose), and a per-project MCP connection (init/config/mcp)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gt-core-labs/gt"
readme = "README.md"
keywords = ["cli", "gt-core", "mcp", "docker-compose"]
categories = ["command-line-utilities"]

[[bin]]
name = "gt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
# Server-comms client + stdio↔HTTP MCP proxy, downloaded as a published crate so the
# CLI/UX logic here stays isolated from it.
gt-mcp = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Interactive first-run wizard (`gt init`).
inquire = "0.7"
# `gt update`: in-place self-update from this repo's GitHub releases.
self_update = { version = "0.42", default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }

[dev-dependencies]
tempfile = "3"
