[package]
name = "gt"
version = "0.5.0"
edition = "2021"
description = "gt-core client CLI — workspace context (prime/workspace), a per-project MCP connection (init/config/mcp), and self-registration as MCP tools (tools/register)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gt-core-labs/gt"
readme = "README.md"
keywords = ["cli", "gt-core", "mcp", "docker-compose"]
categories = ["command-line-utilities"]

[[bin]]
name = "gt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
# Server-comms client + stdio↔HTTP MCP proxy, downloaded as a published crate so the
# CLI/UX logic here stays isolated from it.
gt-mcp = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Decode the access-token JWT `exp` claim (no verification) to refresh pre-flight.
base64 = "0.22"
# Interactive first-run wizard (`gt init`).
inquire = "0.7"
# `gt update`: in-place self-update from this repo's GitHub releases.
self_update = { version = "0.42", default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }
# `gt tools`: expose gt's own subcommands as MCP tools over stdio (server side).
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
schemars = "1"

[dev-dependencies]
tempfile = "3"
